--- a/src/assets/styles/scss/var/var.scss
+++ b/src/assets/styles/scss/var/var.scss
@@ -1,12 +1,13 @@
 // Breakpoints Use in mixins
-$desktop-breakpoint: 1024px;
-$tablet-breakpoint: 768px;
-$mobile-height-breakpoint: 640px;
+$tablet-breakpoint: 1024px;
+$mobile-breakpoint: 768px;
+$mobile-low-breakpoint: 390px;
 
 // Colors
 $primary: #fff;
-$secondary: #7A7A7A;
+$secondary: #393939;
 $title-primary: #03AAC0;
+$background-color: rgb(245, 245, 245);
 $white: #fff;
 
 // Fonts
