--- a/src/assets/styles/scss/var/var.scss
+++ b/src/assets/styles/scss/var/var.scss
@@ -9,6 +9,8 @@ $secondary: #393939;
 $title-primary: #03AAC0;
 $background-color: rgb(245, 245, 245);
 $white: #fff;
+$grey: #191919;
+$red: #FF0000;
 
 // Fonts
 $title-font: 'Inconsolata', monospace;
