--- a/src/assets/styles/scss/general/general.scss
+++ b/src/assets/styles/scss/general/general.scss
@@ -1,3 +1,49 @@
+.socials {
+  display: flex;
+  gap: 25px;
+  position: absolute;
+  right: 48px;
+  bottom: 48px;
+
+  @include media-tablet {
+    left: 48px;
+    bottom: 23px;
+  }
+
+  @include media-mobile {
+    left: 23px;
+  }
+
+  &__link {
+    color: $background-color;
+    font-size: 16px;
+    font-weight: 300;
+    position: relative;
+
+    @include media-mobile {
+      font-size: 11px;
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: $background-color;
+      width: 100%;
+
+      @include media-mobile {
+        height: 1px;
+      }
+    }
+  }
+
+  .socials__item:hover .socials__link:after {
+    opacity: 0;
+  }
+}
+
 .section--general {
 
   .general {
@@ -52,6 +98,91 @@
       @include media-mobile-low {
         font-size: 23px;
       }
+    }
+  }
+}
+
+.section--projects {
+
+  .projects {
+    padding-top: 50px;
+
+    &__item {
+      margin-bottom: 100px;
+      padding-left: 35px;
+      position: relative;
+      transition: opacity 0.2s;
+
+      &:after {
+        content: '01.';
+        position: absolute;
+        left: 0;
+        top: 25px;
+        font-size: 15px;
+        opacity: 0.5;
+      }
+
+      &:nth-child(2) {
+
+        &:after {
+          content: '02.';
+        }
+      }
+
+      &:nth-child(3) {
+
+        &:after {
+          content: '03.';
+        }
+      }
+
+      &:nth-child(4) {
+
+        &:after {
+          content: '04.';
+        }
+      }
+
+      &:nth-child(5) {
+
+        &:after {
+          content: '05.';
+        }
+      }
+
+      .projects__link:hover {
+        color: $grey;
+      }
+    }
+
+    &__title {
+      font-size: 50px;
+      font-weight: 300;
+      line-height: 50px;
+    }
+
+    &__subtitle {
+      margin-top: 5px;
+      color: $secondary;
+      opacity: 0.5;
+      font-size: 17px;
+      font-weight: 300;
+    }
+
+    .projects__preview {
+      position: fixed;
+      z-index: -1;
+      width: 375px;
+      height: 250px;
+      opacity: 1;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      transition: opacity 0.2s;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
     }
   }
 }
