--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -131,6 +131,63 @@ details, summary {
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
 
+/* line 131, ../scss/layout/layout.scss */
+.title {
+  font-size: 175px;
+  line-height: 175px;
+  font-weight: 300; }
+  @media (max-width: 1024px) {
+    /* line 131, ../scss/layout/layout.scss */
+    .title {
+      font-size: 97px;
+      line-height: 97px; } }
+  @media (max-width: 768px) {
+    /* line 131, ../scss/layout/layout.scss */
+    .title {
+      font-size: 71px;
+      line-height: 78px; } }
+  @media (max-width: 390px) {
+    /* line 131, ../scss/layout/layout.scss */
+    .title {
+      font-size: 62px;
+      line-height: 74px; } }
+
+/* line 152, ../scss/layout/layout.scss */
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 25px; }
+  /* line 156, ../scss/layout/layout.scss */
+  .socials__link {
+    color: whitesmoke;
+    font-size: 16px;
+    font-weight: 300;
+    position: relative; }
+    @media (max-width: 768px) {
+      /* line 156, ../scss/layout/layout.scss */
+      .socials__link {
+        font-size: 11px; } }
+    /* line 166, ../scss/layout/layout.scss */
+    .socials__link:after {
+      content: '';
+      position: absolute;
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: whitesmoke;
+      width: 100%; }
+      @media (max-width: 768px) {
+        /* line 166, ../scss/layout/layout.scss */
+        .socials__link:after {
+          height: 1px; } }
+  /* line 181, ../scss/layout/layout.scss */
+  .socials .socials__item:hover .socials__link {
+    background-color: red; }
+  /* line 185, ../scss/layout/layout.scss */
+  .socials .socials__item:hover .socials__link:after {
+    opacity: 0; }
+
 /* line 1, ../scss/layout/header/header.scss */
 .header {
   width: 100%;
@@ -258,52 +315,22 @@ details, summary {
   visibility: visible;
   opacity: 1; }
 
-/* line 1, ../scss/general/general.scss */
-.socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 25px;
+/* line 126, ../scss/layout/header/header.scss */
+.socials-nav {
   position: absolute;
   right: 48px;
   bottom: 48px; }
   @media (max-width: 1024px) {
-    /* line 1, ../scss/general/general.scss */
-    .socials {
+    /* line 126, ../scss/layout/header/header.scss */
+    .socials-nav {
       left: 48px;
       bottom: 23px; } }
   @media (max-width: 768px) {
-    /* line 1, ../scss/general/general.scss */
-    .socials {
+    /* line 126, ../scss/layout/header/header.scss */
+    .socials-nav {
       left: 23px; } }
-  /* line 17, ../scss/general/general.scss */
-  .socials__link {
-    color: whitesmoke;
-    font-size: 16px;
-    font-weight: 300;
-    position: relative; }
-    @media (max-width: 768px) {
-      /* line 17, ../scss/general/general.scss */
-      .socials__link {
-        font-size: 11px; } }
-    /* line 27, ../scss/general/general.scss */
-    .socials__link:after {
-      content: '';
-      position: absolute;
-      height: 2px;
-      bottom: 0;
-      left: 0;
-      background-color: whitesmoke;
-      width: 100%; }
-      @media (max-width: 768px) {
-        /* line 27, ../scss/general/general.scss */
-        .socials__link:after {
-          height: 1px; } }
-  /* line 42, ../scss/general/general.scss */
-  .socials .socials__item:hover .socials__link:after {
-    opacity: 0; }
 
-/* line 49, ../scss/general/general.scss */
+/* line 3, ../scss/general/general.scss */
 .section--general .general {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -314,64 +341,44 @@ details, summary {
   min-height: 100vh;
   padding-bottom: 70px; }
   @media (max-width: 1024px) {
-    /* line 49, ../scss/general/general.scss */
+    /* line 3, ../scss/general/general.scss */
     .section--general .general {
       min-height: auto;
       padding-top: 250px; } }
   @media (max-width: 768px) {
-    /* line 49, ../scss/general/general.scss */
+    /* line 3, ../scss/general/general.scss */
     .section--general .general {
       padding-top: 170px; } }
-  /* line 63, ../scss/general/general.scss */
-  .section--general .general .general__title {
-    font-size: 175px;
-    line-height: 175px;
-    font-weight: 300; }
-    @media (max-width: 1024px) {
-      /* line 63, ../scss/general/general.scss */
-      .section--general .general .general__title {
-        font-size: 97px;
-        line-height: 97px; } }
-    @media (max-width: 768px) {
-      /* line 63, ../scss/general/general.scss */
-      .section--general .general .general__title {
-        font-size: 71px;
-        line-height: 78px; } }
-    @media (max-width: 390px) {
-      /* line 63, ../scss/general/general.scss */
-      .section--general .general .general__title {
-        font-size: 62px;
-        line-height: 74px; } }
-  /* line 84, ../scss/general/general.scss */
+  /* line 17, ../scss/general/general.scss */
   .section--general .general .general__subtitle {
     font-size: 50px;
     font-weight: 300; }
     @media (max-width: 1024px) {
-      /* line 84, ../scss/general/general.scss */
+      /* line 17, ../scss/general/general.scss */
       .section--general .general .general__subtitle {
         font-size: 28px;
         margin-top: 15px; } }
     @media (max-width: 768px) {
-      /* line 84, ../scss/general/general.scss */
+      /* line 17, ../scss/general/general.scss */
       .section--general .general .general__subtitle {
         font-size: 26px;
         margin-top: 10px; } }
     @media (max-width: 390px) {
-      /* line 84, ../scss/general/general.scss */
+      /* line 17, ../scss/general/general.scss */
       .section--general .general .general__subtitle {
         font-size: 23px; } }
 
-/* line 107, ../scss/general/general.scss */
+/* line 40, ../scss/general/general.scss */
 .section--projects .projects {
   padding-top: 50px; }
-  /* line 110, ../scss/general/general.scss */
+  /* line 43, ../scss/general/general.scss */
   .section--projects .projects__item {
     margin-bottom: 100px;
     padding-left: 35px;
     position: relative;
     -webkit-transition: opacity 0.2s;
     transition: opacity 0.2s; }
-    /* line 116, ../scss/general/general.scss */
+    /* line 49, ../scss/general/general.scss */
     .section--projects .projects__item:after {
       content: '01.';
       position: absolute;
@@ -379,34 +386,34 @@ details, summary {
       top: 25px;
       font-size: 15px;
       opacity: 0.5; }
-    /* line 127, ../scss/general/general.scss */
+    /* line 60, ../scss/general/general.scss */
     .section--projects .projects__item:nth-child(2):after {
       content: '02.'; }
-    /* line 134, ../scss/general/general.scss */
+    /* line 67, ../scss/general/general.scss */
     .section--projects .projects__item:nth-child(3):after {
       content: '03.'; }
-    /* line 141, ../scss/general/general.scss */
+    /* line 74, ../scss/general/general.scss */
     .section--projects .projects__item:nth-child(4):after {
       content: '04.'; }
-    /* line 148, ../scss/general/general.scss */
+    /* line 81, ../scss/general/general.scss */
     .section--projects .projects__item:nth-child(5):after {
       content: '05.'; }
-    /* line 153, ../scss/general/general.scss */
+    /* line 86, ../scss/general/general.scss */
     .section--projects .projects__item .projects__link:hover {
       color: #191919; }
-  /* line 158, ../scss/general/general.scss */
+  /* line 91, ../scss/general/general.scss */
   .section--projects .projects__title {
     font-size: 50px;
     font-weight: 300;
     line-height: 50px; }
-  /* line 164, ../scss/general/general.scss */
+  /* line 97, ../scss/general/general.scss */
   .section--projects .projects__subtitle {
     margin-top: 5px;
     color: #393939;
     opacity: 0.5;
     font-size: 17px;
     font-weight: 300; }
-  /* line 172, ../scss/general/general.scss */
+  /* line 105, ../scss/general/general.scss */
   .section--projects .projects .projects__preview {
     position: fixed;
     z-index: -1;
@@ -418,9 +425,139 @@ details, summary {
     pointer-events: none;
     -webkit-transition: opacity 0.2s;
     transition: opacity 0.2s; }
-    /* line 182, ../scss/general/general.scss */
+    /* line 115, ../scss/general/general.scss */
     .section--projects .projects .projects__preview img {
       width: 100%;
       height: 100%; }
+
+/* line 123, ../scss/general/general.scss */
+.section--about {
+  padding-top: 108px; }
+  /* line 128, ../scss/general/general.scss */
+  .section--about .about__info {
+    margin: 0 auto;
+    padding-top: 75px;
+    max-width: 700px;
+    width: 100%; }
+    @media (max-width: 1024px) {
+      /* line 128, ../scss/general/general.scss */
+      .section--about .about__info {
+        max-width: 525px; } }
+    @media (max-width: 768px) {
+      /* line 128, ../scss/general/general.scss */
+      .section--about .about__info {
+        max-width: 285px; } }
+    /* line 142, ../scss/general/general.scss */
+    .section--about .about__info-text {
+      font-size: 30px;
+      line-height: 48px;
+      font-weight: 300;
+      margin-bottom: 15px; }
+      @media (max-width: 1024px) {
+        /* line 142, ../scss/general/general.scss */
+        .section--about .about__info-text {
+          font-size: 24px;
+          line-height: 34px; } }
+      @media (max-width: 768px) {
+        /* line 142, ../scss/general/general.scss */
+        .section--about .about__info-text {
+          font-size: 19px;
+          line-height: 29px; } }
+    /* line 159, ../scss/general/general.scss */
+    .section--about .about__info-author {
+      margin-top: 50px;
+      font-size: 30px;
+      font-weight: 300; }
+      @media (max-width: 1024px) {
+        /* line 159, ../scss/general/general.scss */
+        .section--about .about__info-author {
+          font-size: 24px; } }
+      @media (max-width: 768px) {
+        /* line 159, ../scss/general/general.scss */
+        .section--about .about__info-author {
+          font-size: 20px; } }
+      /* line 172, ../scss/general/general.scss */
+      .section--about .about__info-author a {
+        text-decoration: underline; }
+  /* line 178, ../scss/general/general.scss */
+  .section--about .about__contact {
+    margin-top: 900px;
+    max-width: 815px;
+    width: 100%;
+    margin-left: auto; }
+    @media (max-width: 1024px) {
+      /* line 178, ../scss/general/general.scss */
+      .section--about .about__contact {
+        margin-top: 350px;
+        max-width: 475px; } }
+    @media (max-width: 768px) {
+      /* line 178, ../scss/general/general.scss */
+      .section--about .about__contact {
+        max-width: 271px; } }
+    /* line 193, ../scss/general/general.scss */
+    .section--about .about__contact p {
+      font-size: 45px;
+      line-height: 60px;
+      font-weight: 300; }
+      @media (max-width: 1024px) {
+        /* line 193, ../scss/general/general.scss */
+        .section--about .about__contact p {
+          font-size: 27px;
+          line-height: 34px;
+          font-weight: 400; } }
+      @media (max-width: 768px) {
+        /* line 193, ../scss/general/general.scss */
+        .section--about .about__contact p {
+          font-size: 16px;
+          line-height: 19px;
+          font-weight: 300; } }
+    /* line 211, ../scss/general/general.scss */
+    .section--about .about__contact a {
+      -webkit-animation: blink 3s linear infinite;
+      animation: blink 3s linear infinite; }
+@-webkit-keyframes blink {
+  0% {
+    color: #191919; }
+  25% {
+    color: #949494; }
+  50% {
+    color: #fff; }
+  75% {
+    color: #949494; }
+  100% {
+    color: #191919; } }
+@keyframes blink {
+  0% {
+    color: #191919; }
+  25% {
+    color: #949494; }
+  50% {
+    color: #fff; }
+  75% {
+    color: #949494; }
+  100% {
+    color: #191919; } }
+  /* line 234, ../scss/general/general.scss */
+  .section--about .socials-about {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 50px; }
+    /* line 238, ../scss/general/general.scss */
+    .section--about .socials-about .socials__link {
+      color: #191919;
+      font-size: 25px; }
+      @media (max-width: 1024px) {
+        /* line 238, ../scss/general/general.scss */
+        .section--about .socials-about .socials__link {
+          font-size: 23px; } }
+      @media (max-width: 768px) {
+        /* line 238, ../scss/general/general.scss */
+        .section--about .socials-about .socials__link {
+          font-size: 20px; } }
+      /* line 250, ../scss/general/general.scss */
+      .section--about .socials-about .socials__link:after {
+        background-color: #191919; }
 
 /*# sourceMappingURL=main.css.map */
