--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -47,6 +47,7 @@
       background: none;
       font-weight: 300;
       overflow-x: hidden;
+      color: $grey;
 
       &:hover {
         color: $red;
