--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -242,23 +242,24 @@ details, summary {
       border: none;
       background: none;
       font-weight: 300;
-      overflow-x: hidden; }
-      /* line 51, ../scss/layout/header/header.scss */
+      overflow-x: hidden;
+      color: #191919; }
+      /* line 52, ../scss/layout/header/header.scss */
       .header__inner .menu-btn:hover {
         color: #FF0000; }
-    /* line 56, ../scss/layout/header/header.scss */
+    /* line 57, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active, .header__inner .header__info.is-active p {
       color: whitesmoke; }
-    /* line 60, ../scss/layout/header/header.scss */
+    /* line 61, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active:hover {
       color: #FF0000; }
-  /* line 65, ../scss/layout/header/header.scss */
+  /* line 66, ../scss/layout/header/header.scss */
   .header__inner.scrolled {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end; }
 
-/* line 70, ../scss/layout/header/header.scss */
+/* line 71, ../scss/layout/header/header.scss */
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -280,53 +281,53 @@ details, summary {
   transition: all .375s;
   width: 100vw;
   height: 100vh; }
-  /* line 87, ../scss/layout/header/header.scss */
+  /* line 88, ../scss/layout/header/header.scss */
   .nav__item {
     font-size: 175px;
     line-height: 180px;
     font-weight: 300; }
     @media (max-width: 1024px) {
-      /* line 87, ../scss/layout/header/header.scss */
+      /* line 88, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 130px;
         line-height: 155px; } }
     @media (max-width: 768px) {
-      /* line 87, ../scss/layout/header/header.scss */
+      /* line 88, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 82px;
         line-height: 90px; } }
     @media (max-width: 390px) {
-      /* line 87, ../scss/layout/header/header.scss */
+      /* line 88, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 71px;
         line-height: 80px; } }
-    /* line 107, ../scss/layout/header/header.scss */
+    /* line 108, ../scss/layout/header/header.scss */
     .nav__item:first-child {
       margin-bottom: 10px; }
-  /* line 112, ../scss/layout/header/header.scss */
+  /* line 113, ../scss/layout/header/header.scss */
   .nav__link {
     color: whitesmoke; }
-    /* line 115, ../scss/layout/header/header.scss */
+    /* line 116, ../scss/layout/header/header.scss */
     .nav__link:hover {
       color: #FF0000; }
 
-/* line 121, ../scss/layout/header/header.scss */
+/* line 122, ../scss/layout/header/header.scss */
 .nav.is-active--nav {
   visibility: visible;
   opacity: 1; }
 
-/* line 126, ../scss/layout/header/header.scss */
+/* line 127, ../scss/layout/header/header.scss */
 .socials-nav {
   position: absolute;
   right: 48px;
   bottom: 48px; }
   @media (max-width: 1024px) {
-    /* line 126, ../scss/layout/header/header.scss */
+    /* line 127, ../scss/layout/header/header.scss */
     .socials-nav {
       left: 48px;
       bottom: 23px; } }
   @media (max-width: 768px) {
-    /* line 126, ../scss/layout/header/header.scss */
+    /* line 127, ../scss/layout/header/header.scss */
     .socials-nav {
       left: 23px; } }
 
