--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -49,7 +49,7 @@
       overflow-x: hidden;
       color: $grey;
 
-      &:hover {
+      &:hover, &:active {
         color: $red;
       }
     }
