--- a/src/assets/styles/scss/layout/header/header.scss
+++ b/src/assets/styles/scss/layout/header/header.scss
@@ -52,6 +52,12 @@
       &:hover, &:active {
         color: $red;
       }
+
+      @media(hover: hover) and (pointer: fine) {
+        .menu-btn:hover {
+          color: $red;
+        }
+      }
     }
 
     .menu-btn.is-active, .header__info.is-active p {
