--- a/src/assets/styles/css/main.css
+++ b/src/assets/styles/css/main.css
@@ -247,23 +247,27 @@ details, summary {
       /* line 52, ../scss/layout/header/header.scss */
       .header__inner .menu-btn:hover {
         color: #FF0000; }
-      @media (max-width: 1024px) {
-        /* line 58, ../scss/layout/header/header.scss */
-        .header__inner .menu-btn .menu-btn:hover {
-          color: #191919; } }
-    /* line 64, ../scss/layout/header/header.scss */
+        @media (max-width: 1024px) {
+          /* line 52, ../scss/layout/header/header.scss */
+          .header__inner .menu-btn:hover {
+            color: #191919; } }
+    /* line 61, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active, .header__inner .header__info.is-active p {
       color: whitesmoke; }
-    /* line 68, ../scss/layout/header/header.scss */
+    /* line 65, ../scss/layout/header/header.scss */
     .header__inner .menu-btn.is-active:hover {
       color: #FF0000; }
-  /* line 73, ../scss/layout/header/header.scss */
+      @media (max-width: 1024px) {
+        /* line 65, ../scss/layout/header/header.scss */
+        .header__inner .menu-btn.is-active:hover {
+          color: #fff; } }
+  /* line 74, ../scss/layout/header/header.scss */
   .header__inner.scrolled {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end; }
 
-/* line 78, ../scss/layout/header/header.scss */
+/* line 79, ../scss/layout/header/header.scss */
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -285,53 +289,53 @@ details, summary {
   transition: all .375s;
   width: 100vw;
   height: 100vh; }
-  /* line 95, ../scss/layout/header/header.scss */
+  /* line 96, ../scss/layout/header/header.scss */
   .nav__item {
     font-size: 175px;
     line-height: 180px;
     font-weight: 300; }
     @media (max-width: 1024px) {
-      /* line 95, ../scss/layout/header/header.scss */
+      /* line 96, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 130px;
         line-height: 155px; } }
     @media (max-width: 768px) {
-      /* line 95, ../scss/layout/header/header.scss */
+      /* line 96, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 82px;
         line-height: 90px; } }
     @media (max-width: 390px) {
-      /* line 95, ../scss/layout/header/header.scss */
+      /* line 96, ../scss/layout/header/header.scss */
       .nav__item {
         font-size: 71px;
         line-height: 80px; } }
-    /* line 115, ../scss/layout/header/header.scss */
+    /* line 116, ../scss/layout/header/header.scss */
     .nav__item:first-child {
       margin-bottom: 10px; }
-  /* line 120, ../scss/layout/header/header.scss */
+  /* line 121, ../scss/layout/header/header.scss */
   .nav__link {
     color: whitesmoke; }
-    /* line 123, ../scss/layout/header/header.scss */
+    /* line 124, ../scss/layout/header/header.scss */
     .nav__link:hover {
       color: #FF0000; }
 
-/* line 129, ../scss/layout/header/header.scss */
+/* line 130, ../scss/layout/header/header.scss */
 .nav.is-active--nav {
   visibility: visible;
   opacity: 1; }
 
-/* line 134, ../scss/layout/header/header.scss */
+/* line 135, ../scss/layout/header/header.scss */
 .socials-nav {
   position: absolute;
   right: 48px;
   bottom: 48px; }
   @media (max-width: 1024px) {
-    /* line 134, ../scss/layout/header/header.scss */
+    /* line 135, ../scss/layout/header/header.scss */
     .socials-nav {
       left: 48px;
       bottom: 23px; } }
   @media (max-width: 768px) {
-    /* line 134, ../scss/layout/header/header.scss */
+    /* line 135, ../scss/layout/header/header.scss */
     .socials-nav {
       left: 23px; } }
 
